[project]
name = "sjson"
version = "0.1.0"
description = "A streaming JSON library for highly compressed JSON transmission."
authors = [
    {name = "Jeffrey Naujok",email = "jnaujok@harvestwave.com"}
]
readme = "README.md"
license = "LGPL-2.1"
requires-python = ">=3.10"
dependencies = [
    "bitstring (>=4.3.0,<5.0.0)",
    "lz4 (>=4.4.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "sjson", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.0,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)"
]
