[project]
name = "sjson"
version = "0.1.2"
description = "A streaming JSON library for highly compressed JSON transmission."
authors = [
    {name = "Jeffrey Naujok",email = "jnaujok@harvestwave.com"}
]
readme = "README.md"
license = "LGPL-2.1"
requires-python = ">=3.10"
dependencies = [
    "bitstring (>=4.3.0,<5.0.0)",
    "lz4 (>=4.4.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "sjson", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.0,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max_line_length = 88

[tool.black]
line-length = 88 # Maximum line length (default is 80)
target-version = ["py312"] # Target Python versions (e.g., py39, py310)
skip-string-normalization = true # Skip normalization of string quotes
include = '\.pyi?$' # Regex for files to include (default: .py files)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
''' # Regex for files/directories to exclude